@@ -32,7 +32,6 @@ import java.util.Date;
 import java.util.List;
 import java.util.Objects;
 import java.util.Optional;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import static java.util.stream.StreamSupport.stream;
@@ -90,8 +89,7 @@ public class EvidenceManagementUploadService {
         }
 
         log.info("EMSDocStore Uploaded files are: {} and case id: {}",
-            uploadResponse.getDocuments().stream().map(e -> e.links.binary.href).collect(Collectors.toList()),
-            caseTypeId);
+            uploadResponse.getDocuments().stream().map(e -> e.links.binary.href).toList(), caseTypeId);
 
         return toUploadResponse(uploadResponse);
     }
@@ -130,13 +128,13 @@ public class EvidenceManagementUploadService {
 
         return filesStream
             .map(this::createUploadResponse)
-            .collect(Collectors.toList());
+            .toList();
     }
 
     private List<FileUploadResponse> toUploadResponse(UploadResponse uploadResponse) {
         Stream<Document> documentStream = stream(uploadResponse.getDocuments().spliterator(), false);
 
-        return documentStream.map(this::createUploadResponse).collect(Collectors.toList());
+        return documentStream.map(this::createUploadResponse).toList();
     }
 
     private String getTextFromJsonNode(JsonNode document, String attribute) {
